--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,11 @@
 
                 <plugins>
                         <plugin>
-                                <groupId>org.apache.tomcat.maven</groupId>
-                                <artifactId>tomcat7-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-resources-plugin</artifactId>
                                 <version>2.2</version>
-                                <configuration>
+				<configuration>
+				<encoding>UTF-8</encoding>
                                 <path>/${project.artifactId}##${project.version}</path>
                                 <url>http://172.31.19.199:8080/manager/text</url>
                                         <username>admin</username>
