--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.0.1</version>
+	    <properties> <project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding> 
 	  <!--  <scope>provided</scope> -->
     </dependency>
     <dependency>
